--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Dashboard" />
         <activity android:name=".Register" />
-        <activity android:name=".Dashboard">
+        <activity android:name=".Timetable">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
