--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Splash"
+            android:theme="@style/HiddenTitleTheme"></activity>
         <activity
-            android:name=".Floor2"
+            android:name=".Floor"
             android:theme="@style/HiddenTitleTheme" />
-        <activity
-            android:name=".Floor1"
-            android:theme="@style/HiddenTitleTheme"/>
         <activity
             android:name=".Timetable"
             android:theme="@style/HiddenTitleTheme" />
@@ -24,14 +23,14 @@
         <activity
             android:name=".Register"
             android:theme="@style/HiddenTitleTheme" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:theme="@style/HiddenTitleTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
