--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".forum_activity"></activity>
         <activity
             android:name=".View.MessageDetail"
-            android:theme="@style/AppTheme.PopMe"/>
+            android:theme="@style/AppTheme.PopMe" />
         <activity
             android:name=".View.MessageBox"
-            android:theme="@style/HiddenTitleTheme"/>
+            android:theme="@style/HiddenTitleTheme" />
         <activity
             android:name=".View.SendMsg"
             android:theme="@style/AppTheme.PopMe" />
         <activity
             android:name=".View.Book_for_sale_detail"
-            android:theme="@style/HiddenTitleTheme"/>
+            android:theme="@style/HiddenTitleTheme" />
         <activity
             android:name=".View.BookSale"
             android:theme="@style/HiddenTitleTheme" />
