--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.MyBookDetail"
+        <activity android:name=".libraryCategoryBooks"></activity>
+        <activity
+            android:name=".View.MyBookDetail"
             android:theme="@style/AppTheme.PopMe" />
-        <activity android:name=".Library"
-            android:theme="@style/HiddenTitleTheme"/>
+        <activity
+            android:name=".View.Library"
+            android:theme="@style/HiddenTitleTheme" />
         <activity android:name=".forum_activity" />
         <activity
             android:name=".View.MessageDetail"
