--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".libraryCategoryBooks"></activity>
+        <activity android:name=".post_review"></activity>
+        <activity android:name=".libraryCategoryBooks" />
         <activity
             android:name=".View.MyBookDetail"
             android:theme="@style/AppTheme.PopMe" />
