--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".post_review"></activity>
-        <activity android:name=".libraryCategoryBooks" />
+        <activity android:name=".LibraryBookDetail" />
         <activity
             android:name=".View.MyBookDetail"
             android:theme="@style/AppTheme.PopMe" />
