Library slide in menu done Still need to apply filter functions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".View.Post_review"
-            android:theme="@style/AppTheme.PopMe"/>
-
-        <activity android:name=".View.LibraryBookDetail"
-            android:theme="@style/HiddenTitleTheme"/>
+        <activity
+            android:name=".View.Post_review"
+            android:theme="@style/AppTheme.PopMe" />
+        <activity
+            android:name=".View.LibraryBookDetail"
+            android:theme="@style/HiddenTitleTheme" />
         <activity
             android:name=".View.MyBookDetail"
             android:theme="@style/AppTheme.PopMe" />
