--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.github.MikeOrtiz:TouchImageView:2.3.3'
-
+    implementation 'com.github.mohammadatif:Animatoo:master'
 }
 apply plugin: 'com.google.gms.google-services'
