--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Post_lib_Book2"></activity>
+        <activity android:name=".Post_lib_Book" />
         <activity
             android:name=".View.Post_review"
             android:theme="@style/AppTheme.PopMe" />
