--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Support2"></activity>
+        <activity android:name=".View.Support"
+            android:theme="@style/HiddenTitleTheme"/>
+        <activity android:name=".View.Support2"
+            android:theme="@style/HiddenTitleTheme"/>
         <activity
             android:name=".View.AddForumComment"
             android:theme="@style/AppTheme.PopMe" />
