--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WebViewer"
+        <activity android:name=".View.WebViewer"
             android:theme="@style/HiddenTitleTheme"/>
         <activity
             android:name=".View.Support"
