--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name=".Uni"
+        android:name=".Application.Uni"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
